force-app/main/default/objects/StudentGrades__c/StudentGrades__c.object-meta.xml
<CustomObject>
    <description>Grades of a Student</description>
    <label>StudentGrades</label>
    <nameField>
        <displayFormat>A-{000}</displayFormat>
        <label>Serial Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>StudentGrades</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>