force-app/main/default/objects/StudentGrades__c/fields/Marks__c.field-meta.xml
<CustomField>
    <fullName>Marks__c</fullName>
    <description>Student Marks</description>
    <label>Marks</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>