force-app/main/default/objects/StudentGrades__c/fields/StudentMaster__c.field-meta.xml
<CustomField>
    <fullName>StudentMaster__c</fullName>
    <description>Master control for student?</description>
    <label>StudentMaster</label>
    <referenceTo>StudentMaster__c</referenceTo>
    <relationshipLabel>StudentGrades</relationshipLabel>
    <relationshipName>StudentGrades</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>