force-app/main/default/objects/StudentGrades__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <label>Subject</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chemistry</fullName>
                <default>true</default>
                <label>Chemistry</label>
            </value>
            <value>
                <fullName>Logic Design</fullName>
            </value>
            <value>
                <fullName>Math</fullName>
            </value>
            <value>
                <fullName>Social Studies</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>