force-app/main/default/objects/StudentGrades__c/fields/University_Name__c.field-meta.xml
<CustomField>
    <fullName>University_Name__c</fullName>
    <description>Name of a University</description>
    <formula>StudentMaster__r.University__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>University Name</label>
    <type>Text</type>
</CustomField>