force-app/main/default/objects/StudentGrades__c/listViews/Frank_Gifford.listView-meta.xml
<ListView>
    <fullName>Frank_Gifford</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Frank Gifford</label>
</ListView>