force-app/main/default/objects/StudentGrades__c/listViews/Joe_Dude.listView-meta.xml
<ListView>
    <fullName>Joe_Dude</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Joe Dude</label>
</ListView>